# halal-screen-bot

./: README.md  pyproject.toml
core/: config.py
files/config/: mime_types.py
