[tool.poetry]
name = "halal-screen-bot"
version = "0.1.0"
description = ""
authors = ["Ravshan Selimov <51333533+ravshan01@users.noreply.github.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
